--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
     "@mui/x-data-grid": "^5.10.0",
+    "@paypal/react-paypal-js": "^7.8.1",
     "@types/bcryptjs": "^2.4.2",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.30.0",
+    "formidable": "^2.0.1",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
@@ -29,6 +32,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.5",
     "@types/js-cookie": "^3.0.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "17.0.29",
